[gd_scene load_steps=26 format=2]

[ext_resource path="res://UI/KaStore.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Store.gd" type="Script" id=2]
[ext_resource path="res://Music/jellyoflegendsub.ogg" type="AudioStream" id=3]
[ext_resource path="res://UI/SELECTED.png" type="Texture" id=4]
[ext_resource path="res://UI/SELECT.png" type="Texture" id=5]
[ext_resource path="res://Animations/Jellyfish-0/1.png" type="Texture" id=6]
[ext_resource path="res://UI/LOCKED.png" type="Texture" id=7]
[ext_resource path="res://UI/Check.png" type="Texture" id=8]
[ext_resource path="res://Animations/Jellyfish-0/16.png" type="Texture" id=9]
[ext_resource path="res://SFX/button.wav" type="AudioStream" id=10]
[ext_resource path="res://Animations/Jellyfish-0/29.png" type="Texture" id=11]
[ext_resource path="res://Animations/Jellyfish-0/24.png" type="Texture" id=12]
[ext_resource path="res://UI/UNLOCK.png" type="Texture" id=13]
[ext_resource path="res://UI/world of water.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Scripts/CurrencyDisplay.gd" type="Script" id=15]
[ext_resource path="res://UI/CURRENCY2.png" type="Texture" id=16]
[ext_resource path="res://UI/kawha.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "unlocked",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "locked",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "unlock",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "select",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Selected",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Unselected",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 14 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "unlocked",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "price",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=8]
resource_name = "iaptempt"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("kawha2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.7, 0.7 ), Vector2( 0.6, 0.6 ) ]
}

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="SkinPrev" type="AnimatedSprite" parent="."]
position = Vector2( 297, 559 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "0"

[node name="KaStore" type="Sprite" parent="."]
position = Vector2( 296, 601 )
texture = ExtResource( 1 )

[node name="Unlocked" type="AnimatedSprite" parent="."]
position = Vector2( 289, 587 )
scale = Vector2( 2.43282, 2.37059 )
frames = SubResource( 2 )
animation = "unlocked"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 296, 601 )
current = true

[node name="BACK" type="Button" parent="."]
margin_left = -2.0
margin_top = 9.0
margin_right = 163.0
margin_bottom = 161.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"

[node name="Submix" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.995
autoplay = true
bus = "Music"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 293, 963 )
frames = SubResource( 3 )
animation = "unlock"

[node name="Select" type="Button" parent="AnimatedSprite"]
margin_left = -170.0
margin_top = -73.0
margin_right = 184.0
margin_bottom = 66.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="."]
margin_left = 472.0
margin_top = 520.0
margin_right = 589.0
margin_bottom = 640.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="."]
margin_left = 2.0
margin_top = 521.0
margin_right = 119.0
margin_bottom = 641.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chroma1" type="AnimatedSprite" parent="."]
position = Vector2( 195, 840 )
scale = Vector2( 0.747788, 0.747059 )
frames = SubResource( 4 )
animation = "Selected"

[node name="chr1Button" type="Button" parent="Chroma1"]
margin_left = -128.0
margin_top = -122.0
margin_right = 34.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chroma2" type="AnimatedSprite" parent="."]
position = Vector2( 331, 843 )
scale = Vector2( 0.747788, 0.747059 )
frames = SubResource( 4 )
animation = "Unselected"

[node name="chr2Button" type="Button" parent="Chroma2"]
margin_left = -123.03
margin_top = -125.827
margin_right = 38.9704
margin_bottom = 16.1733
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chroma3" type="AnimatedSprite" parent="."]
position = Vector2( 466, 840 )
scale = Vector2( 0.747788, 0.747059 )
frames = SubResource( 4 )
animation = "Unselected"

[node name="chr3Button" type="Button" parent="Chroma3"]
margin_left = -132.391
margin_top = -121.811
margin_right = 29.6095
margin_bottom = 20.1889
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency" type="Label" parent="."]
margin_left = 380.0
margin_top = 5.0
margin_right = 599.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 5 )
valign = 1
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currency2" type="Label" parent="."]
margin_left = 6.0
margin_top = 322.0
margin_right = 586.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 5 )
text = "DEFAULT SKIN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceDisplay" type="AnimatedSprite" parent="."]
position = Vector2( 295, 1100 )
frames = SubResource( 6 )
animation = "price"

[node name="Label" type="Label" parent="."]
margin_left = 216.0
margin_top = 1060.0
margin_right = 328.0
margin_bottom = 1138.0
custom_fonts/font = SubResource( 7 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kawha" type="Sprite" parent="."]
position = Vector2( 187, 1100 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )

[node name="kawha2" type="Sprite" parent="."]
position = Vector2( 348, 46 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "iaptempt"
anims/iaptempt = SubResource( 8 )

[node name="IAP" type="Button" parent="."]
margin_left = 323.0
margin_top = 12.0
margin_right = 590.0
margin_bottom = 81.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BACK" to="." method="_on_BACK_pressed"]
[connection signal="pressed" from="AnimatedSprite/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Chroma1/chr1Button" to="." method="_on_chr1Button_pressed"]
[connection signal="pressed" from="Chroma2/chr2Button" to="." method="_on_chr2Button_pressed"]
[connection signal="pressed" from="Chroma3/chr3Button" to="." method="_on_chr3Button_pressed"]
[connection signal="pressed" from="IAP" to="." method="_on_IAP_pressed"]
